# argus

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTEXT.md  CONTRIBUTING.md  Caddyfile  Dockerfile  Full_Operator.md  IMPLEMENTATION_CONTEXT.md  LLM-OVERVIEW.md  README.md  RUN_AUTONOMOUS_REFACTOR.md  SECURITY.md  TASK01.md  TASK02.md  TASK03.md  TASK04.md  TASK05.md  TASK06.md  alembic.ini  argus-gaps-plan.md  argus.db  argus.service  docker-compose.yml  glama.json  handoff.md  homelab.yaml  llms-full.txt  llms.txt  plan.md  pyproject.toml  repomix.config.json  requirements.txt  server.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  extraction_failure.yml  feature_request.md  feature_request.yml  provider_request.yml
.github/workflows/: ci.yml  docker-publish.yml  publish.yml  pypi-publish.yml
.interface-design/: system.md
1shot/: ANALYSIS.md  PROJECT.md  ROADMAP.md  STATE.md
argus/: __init__.py  auth.py  authority.py  config.py  logging.py  models.py  provider_controls.py  runtime_manifest.py
argus-extract-service/: com.argus.extract-service.plist  main.py  requirements.txt
argus/api/: lifecycle.py  main.py  rate_limit.py  routes_admin.py  routes_dashboard.py  routes_extract.py  routes_health.py  routes_search.py  routes_workflows.py  schemas.py  usage.py
argus/api/templates/: _budget_section.html  base.html  dashboard.html  login.html
argus/attribution/: __init__.py  shapley.py
argus/broker/: __init__.py  balance_check.py  budget_persistence.py  budgets.py  cache.py  dedupe.py  execution.py  health.py  pipeline.py  policies.py  ranking.py  reachability.py  remote_provider.py  router.py  session_flow.py
argus/cli/: main.py
argus/core/: cache.py  rate_limit.py
argus/corpus/: __init__.py  paths.py
argus/extraction/: __init__.py  archive_extractor.py  auth_extractor.py  cache.py  completeness.py  cookies.py  crawl4ai_extractor.py  domain_memory.py  extractor.py  firecrawl_extractor.py  health_poller.py  models.py  obscura_extractor.py  playwright_extractor.py  quality_gate.py  rate_limit.py  residential_extractor.py  residential_service.py  soft_404.py  ssrf.py  trafilatura_result.py  valyu_extractor.py  wayback_extractor.py  you_extractor.py  youtube_extractor.py
argus/mcp/: __init__.py  http_adapter.py  local_adapter.py  resources.py  server.py  tools.py
argus/operations/: __init__.py  presentation.py  status.py
argus/persistence/: __init__.py  db.py  maya_outbox.py  models.py  provider_spend.py  reconcile.py  search_ledger.py  usage.py
argus/providers/: __init__.py  base.py  brave.py  duckduckgo.py  exa.py  github.py  linkup.py  parallel.py  searchapi.py  searxng.py  serper.py  tavily.py  valyu.py  valyu_answer.py  wolfram.py  yahoo.py  you.py
argus/recovery/: __init__.py  archive_ph.py  artifacts.py  database.py  evidence.py  importer.py  operator.py  records.py
argus/search/: __init__.py  embeddings.py  indexer.py  synthesizer.py  topic_map.py  vector_store.py
argus/sessions/: __init__.py  models.py  persistence.py  refinement.py  store.py
argus/worker/: server.py
argus/workflows/: __init__.py  models.py  service.py  summarizer.py
deploy/: README.md  argus.service  com.argus.mcp.plist  com.argus.server.plist  deploy.sh  start-argus-mcp.sh  start-argus.sh
docker/: README.md
docs/: 042826_plan.md  ARCHITECTURE.md  LLM-OVERVIEW.md  PUBLICITY-CHECKLIST.md  PUBLICITY-PLAYBOOK.md  README.md  dashboard-design.md  go-to-market.md  handoff-next-session.md  mcp-clients.md  mcp-tools.md  operations-status.md  providers.md  releasing.md  routing-contract.md  search-architecture.md  search-modes.md  search-operations.md  searxng-setup.md  security-hardening-plan.md  troubleshooting.md
docs/adr/: 0001-canonical-deployment.md  0002-homelab-production-topology.md
docs/reference-repos/: preflight_borrow_check.md  searxng.md  voy.md
docs/research/: competitive-analysis.md  competitive-backlog.md  mcp-search-landscape.md
docs/research/additional-providers-extractors/: research.md
docs/research/authoritative-state/: research.md
docs/research/browser-capability/: research.md
docs/research/deployment-gates/: research.md
docs/research/mcp-search-competitors/: gemini-research.md  research.md
docs/research/obscura/: research.md
docs/research/oci-dependency/: research.md
docs/roadmaps/: argus-retrieval-platform.md
examples/: README.md  basic_search.py  extract_and_recover.py  mcp_quickstart.md  research_pack.py
migrations/: env.py
migrations/versions/: 0001_search_ledger.py  0002_acceptance_fingerprint.py  0003_request_routing_fields.py  0004_operation_ledger.py  0005_provider_spend.py  0006_maya_outbox.py
ops/postgres/: README.md  backup_shared_postgres.sh  import_argus_legacy.sh  postgres_recovery.py  provision_shared_postgres.sql  verify_restore.sh
scripts/: argus-mcp.service  browser_canary.py  build_runtime_manifest.py  deploy-credentials.sh  install-systemd.sh  provision-mcp-client.sh  start-mcp.sh  start-server.sh  verify_release_contract.py
tests/: conftest.py  test_api.py  test_attribution.py  test_broker.py  test_caller_caps.py  test_cli.py  test_config.py  test_container_contract.py  test_core.py  test_corpus.py  test_dashboard.py  test_degraded.py  test_delivery_contract.py  test_distribution_artifacts.py  test_extraction.py  test_http_authority.py  test_logging.py  test_maya_outbox.py  test_mcp_pack_tools.py  test_operation_ledger.py  test_operational_diagnostics.py  test_operational_status.py  test_persistence.py  test_playwright_lifecycle.py  test_postgres_provisioning.py  test_postgres_recovery_artifacts.py  test_postgres_recovery_cli.py  test_production_config.py  test_provider_spend.py  test_providers.py  test_quality_gate.py  test_reachability.py  test_recovery_database.py  test_recovery_import.py  test_recovery_policy.py  test_recovery_records.py  test_remote_provider.py  test_residential_extractor.py  test_runtime_manifest.py  test_search_ledger.py  (+8 more)
(+7 files in other folders)
